--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,7 @@ dependencies {
 
     // circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.mikhaellopez:circleview:1.3.2'
 
     //font
     implementation 'com.github.nitrico.fontbinder:fontbinder:1.0.5'
