--- a/app/build.gradle
+++ b/app/build.gradle
@@ -174,6 +174,8 @@ dependencies {
     // image compressor
     implementation 'id.zelory:compressor:2.1.0'
 
+    // spinner
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
 
 
     //modules
